feat: created a dtos and mapper, changed business logic in service to return dtos, cleaned code a little bit